@@ -22,7 +22,7 @@ For the most up-to-date information see the Parma Polyhedra Library
 site: http://www.cs.unipr.it/ppl/ . */
 
 #include "initializer.hh"
-#include "BoundingBox.defs.hh"
+#include "Bounding_Box.defs.hh"
 #include "Constraint.defs.hh"
 #include "ConSys.defs.hh"
 #include "ConSys.inlines.hh"
@@ -1269,7 +1269,7 @@ ppl_new_Polyhedron_from_bounding_box(Prolog_term_ref t_tp,
         return PROLOG_FAILURE;
     }
 
-    BoundingBox bbox(dimension);
+    Bounding_Box bbox(dimension);
     // Set bbox to reflect its Prolog representation.
     for (dimension_type i = 0; i < dimension; ++i) {
       Prolog_get_cons(t_bb, t_interval, t_bb);
@@ -1615,7 +1615,7 @@ ppl_Polyhedron_get_bounding_box(Prolog_term_ref t_ph,
       cc = ANY_COMPLEXITY;
 
     dimension_type dimension = ph->space_dimension();
-    BoundingBox bbox(dimension);
+    Bounding_Box bbox(dimension);
     ph->shrink_bounding_box(bbox, cc);
     Prolog_term_ref tail = Prolog_new_term_ref();
     Prolog_put_atom(tail, a_nil);
