@@ -9,13 +9,13 @@ WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
 PURPOSE. */
 
-#ifndef PPL_BoundingBox_types_hh
-#define PPL_BoundingBox_types_hh 1
+#ifndef PPL_Bounding_Box_types_hh
+#define PPL_Bounding_Box_types_hh 1
 
 namespace Parma_Polyhedra_Library {
 
-class BoundingBox;
+class Bounding_Box;
 
 }
 
-#endif // !defined(PPL_BoundingBox_types_hh)
+#endif // !defined(PPL_Bounding_Box_types_hh)
