@@ -33,7 +33,7 @@ using namespace Parma_Polyhedra_Library;
 // This is a unbounded box in 4D but bounded in 2D with strict inequalities.
 static void
 test1() {
-  BoundingBox box(4);
+  Bounding_Box box(4);
   box.raise_lower_bound(1, false, -2, 3);
   box.lower_upper_bound(1, true, 4, 1);
   box.raise_lower_bound(2, false, -10, 1);
@@ -66,7 +66,7 @@ test1() {
 // causing upper and lower bounds of the box to be open.
 static void
 test2() {
-  BoundingBox box(4);
+  Bounding_Box box(4);
   box.raise_lower_bound(1, true, -2, 3);
   box.lower_upper_bound(1, false, 4, 1);
   box.raise_lower_bound(2, false, -10, 1);
@@ -95,7 +95,7 @@ test2() {
 // This is an empty box in 2D.
 static void
 test3() {
-  BoundingBox box(2);
+  Bounding_Box box(2);
   box.set_empty();
 
   NNC_Polyhedron ph(box, From_Bounding_Box());
